launchpad-buildd (231) UNRELEASED; urgency=medium

  * Only ignore .bzr and .git when building source packages from recipes,
    not all the things that "dpkg-buildpackage -I" ignores.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 27 Mar 2023 17:56:08 +0100

launchpad-buildd (230) focal; urgency=medium

  * Apply black and isort.
  * Enforce shellcheck in pre-commit.
  * Add an option to disable the proxy after the "pull" phase of a snap
    recipe build.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 10 Feb 2023 18:22:21 +0000

launchpad-buildd (229) focal; urgency=medium

  * Call dpkg-architecture with -a rather than setting DEB_HOST_ARCH, to
    avoid a warning if gcc isn't installed.
  * Prevent the kernel from killing launchpad-buildd if it runs out of
    memory.
  * Restructure lxd group membership handling to avoid requiring the lxd
    snap to be installed at postinst time.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 31 Jan 2023 12:34:34 +0000

launchpad-buildd (228) focal; urgency=medium

  * In CI jobs, chown the VCS tree to buildd:buildd after fetching it, since
    otherwise lpcraft running as the buildd user can't read its .git
    directory.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 26 Jan 2023 15:06:30 +0000

launchpad-buildd (227) focal; urgency=medium

  * Tolerate receiving "builder_constraints": None.
  * Check the appropriate server.key path for the LXD snap.
  * Run lpcraft as the buildd user to allow nvidia.runtime=true to work.
  * Create nvidia* devices in such a way that they can be used by nested
    containers.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 26 Jan 2023 01:11:57 +0000

launchpad-buildd (226) focal; urgency=medium

  * Remove unused "distribution" argument from the binarypackage manager.
    This was only used with the old internal sbuild fork, which we dropped
    in launchpad-buildd 127.
  * Remove the old "distroseries_name" argument from the sourcepackagerecipe