@@ -2,6 +2,7 @@ launchpad-buildd (231) UNRELEASED; urgency=medium
 
   * Only ignore .bzr and .git when building source packages from recipes,
     not all the things that "dpkg-buildpackage -I" ignores.
+  * Use lpci rather than lpcraft, following its rename.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 27 Mar 2023 17:56:08 +0100
 
